# CC-232

./: .gitignore  Guia_curso_CC232.md  README.md
.github/workflows/: semana0.yml
Libreria_cc232/: CMakeLists.txt
Libreria_cc232/Semana10/: CMakeLists.txt  README.md
Libreria_cc232/Semana10/demos/: demo_comparison_sorts.cpp  demo_linear_sorts.cpp  demo_lower_bound.cpp  demo_selection_and_intro.cpp
Libreria_cc232/Semana10/include/: CapituloOrdenamiento.h  ComparisonSorts.h  LinearSorts.h  LowerBound.h  SelectionAlgorithms.h  SortingStats.h  SortingUtils.h
Libreria_cc232/Semana10/lecturas/: Lectura17-Morin-Deng-Ordenamiento.md  Lectura18-Lower-Bound-Comparacion.md
Libreria_cc232/Semana10/pruebas_internas/: test_internal_week10.cpp  test_linear_sorts.cpp  test_lower_bound.cpp  test_selection_intro.cpp  test_stability_and_stats.cpp
Libreria_cc232/Semana10/pruebas_publicas/: test_public_week10.cpp
Libreria_cc232/Semana11/: CMakeLists.txt  README.md
Libreria_cc232/Semana11/demos/: demo_autocomplete.cpp  demo_string_matching.cpp  demo_suffix_structures.cpp  demo_trie_dictionary.cpp
Libreria_cc232/Semana11/include/: AhoCorasick.h  BoyerMoore.h  CapituloCadenas.h  CompressedTrie.h  KMP.h  PrefixFunction.h  RabinKarp.h  StringMatching.h  StringStats.h  SuffixArray.h  SuffixTrie.h  TrieMap.h  TrieSet.h
Libreria_cc232/Semana11/pruebas_internas/: test_aho_corasick.cpp  test_string_matching.cpp  test_suffix_structures.cpp  test_trie_invariants.cpp  test_trie_map.cpp
Libreria_cc232/Semana11/pruebas_publicas/: test_public_week11.cpp
Libreria_cc232/Semana12/: CMakeLists.txt  README.md
Libreria_cc232/Semana12/demos/: demo_benchmark.cpp  demo_fenwick.cpp  demo_lazy_propagation.cpp  demo_prefix_difference.cpp  demo_segment_tree.cpp  demo_sparse_table.cpp
Libreria_cc232/Semana12/include/: AssignmentLazySegmentTree.h  CapituloConsultasRango.h  DifferenceArray.h  FenwickRange.h  FenwickTree.h  FenwickTree2D.h  IterativeSegmentTree.h  LazySegmentTree.h  MaxSubarraySegmentTree.h  MonoidSegmentTree.h  PrefixSums.h  RangeQueryOracle.h  SegmentTree.h  SparseTable.h
Libreria_cc232/Semana12/pruebas_internas/: test_fenwick.cpp  test_lazy_segment_tree.cpp  test_range_query_comparison.cpp  test_segment_tree.cpp  test_sparse_table.cpp
Libreria_cc232/Semana12/pruebas_publicas/: test_public_week12.cpp
Libreria_cc232/Semana13/: CMakeLists.txt  README.md
Libreria_cc232/Semana13/demos/: demo_block_model.cpp  demo_bplus_range_scan.cpp  demo_bst_vs_btree.cpp  demo_btree_delete.cpp  demo_btree_insert.cpp
Libreria_cc232/Semana13/include/: BPlusTree.h  BPlusTreeValidator.h  BTree.h  BTreeValidator.h  BinarySearchTreeBaseline.h  BlockModel.h  BlockStoreSimulator.h  CapituloMemoriaExterna.h  ExternalMemoryCost.h  IoStats.h
Libreria_cc232/Semana13/pruebas_internas/: test_bplus_tree.cpp  test_btree_delete.cpp  test_btree_insert_search.cpp  test_btree_invariants.cpp  test_external_memory_cost.cpp  test_range_scan.cpp
Libreria_cc232/Semana13/pruebas_publicas/: test_public_week13.cpp
Libreria_cc232/Semana14/: CMakeLists.txt  README.md
Libreria_cc232/Semana14/demos/: demo_dictionary_advisor.cpp  demo_full_report.cpp  demo_graph_benchmark.cpp  demo_range_query_advisor.cpp  demo_sorting_benchmark.cpp
Libreria_cc232/Semana14/include/: BenchmarkReport.h  BenchmarkStats.h  BenchmarkTimer.h  CapituloProyectoIntegrador.h  DataStructureAdvisor.h  DictionaryBenchmark.h  GraphBenchmark.h  RangeQueryBenchmark.h  SortingBenchmark.h  StructureRecommendation.h  TextIndexBenchmark.h  WorkloadGenerator.h  WorkloadProfile.h
Libreria_cc232/Semana14/pruebas_internas/: test_benchmark_stats.cpp  test_dictionary_advisor.cpp  test_range_query_advisor.cpp  test_report_generation.cpp  test_sorting_advisor.cpp  test_workload_profile.cpp
Libreria_cc232/Semana14/pruebas_publicas/: test_public_week14.cpp
Libreria_cc232/Semana4/: Resumen_Semana4.md
Libreria_cc232/Semana6/: Ejercicios6-CC232.md  Respuestas_iniciales.md  Resumen_Semana6.md
Libreria_cc232/Semana7/: Actividad7-CC232.md  Ejercicios7-CC232.md
Libreria_cc232/Semana8/: Actividad8-CC232.md
Libreria_cc232/Semana9/: CMakeLists.txt  Ejercicios9-CC232.md  README.md
Libreria_cc232/Semana9/demos/: demo_deng_search_framework.cpp  demo_graph_variants.cpp  demo_morin_representations.cpp  demo_weighted_algorithms.cpp
Libreria_cc232/Semana9/include/: AdjacencyListGraph.h  AdjacencyMatrixGraph.h  CapituloGrafos.h  DisjointSet.h  EdgeListGraph.h  Graph.h  GraphAlgorithms.h  GraphTypes.h  GridGraph.h  PriorityUpdaters.h
Libreria_cc232/Semana9/pruebas_internas/: test_biconnected_components.cpp  test_graph_variants.cpp  test_internal_week9.cpp  test_weighted_algorithms.cpp
Libreria_cc232/Semana9/pruebas_publicas/: test_public_week9.cpp
Semana0/: Actividad0-CC232.md  Ejercicios0-CC232.md  README.md  RUBRICA_Semana0.md  VALIDACION_LOCAL.txt
Semana0/Proyecto0/: CMakeLists.txt
Semana0/Proyecto0/apps/: demo_asan_out_of_bounds.cpp  demo_copy_semantics.cpp  demo_iterator_invalid.cpp  demo_iterator_invalidation.cpp  demo_raii.cpp  demo_stl_algorithms.cpp  demo_templates.cpp  demo_ubsan_overflow.cpp  demo_vector_growth.cpp
Semana0/Proyecto0/bench/: bench_cache_effects.cpp  bench_vector_growth.cpp
Semana0/Proyecto0/docs/: README.md
Semana0/Proyecto0/include/: mini_test.h  simple_array.h  warmup_vector.h
Semana0/Proyecto0/tests/: test_simple_array.cpp
Semana0/avanzado/: Cobertura-Avanzada.md  Ejercicios0_experimentos_gpp.md  INSTRUCCIONES_Ejercicios0.md  INSTRUCCIONES_Ejercicios0_v4_2.md  Optimizacion-LTO-PGO.md  Profiling-gprof.md  README.md  stl_optimizacion_demostracion.cpp
Semana0/lecturas/: Lectura00-Cpp-Minimo-CC232.md  Lectura01-Templates-Genericos.md  Lectura02-CMake-CTest-CC232.md  Lectura03-Pruebas-Unitarias.md  Lectura04-Sanitizers.md  Lectura06-STL-Complejidad.md  README.md
