cmake_minimum_required(VERSION 3.20)

project(CC232 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

enable_testing()

add_subdirectory(Semana1)
add_subdirectory(Semana2)
add_subdirectory(Semana3)
add_subdirectory(Semana4)
add_subdirectory(Semana5)
add_subdirectory(Semana6)
add_subdirectory(Semana7)
add_subdirectory(Semana8)
add_subdirectory(Semana9)
add_subdirectory(Semana10)
